Modify pom to configure tests based-on the JDK level of the project.